--- a/steps/app/templates/registration/login.html
+++ b/steps/app/templates/registration/login.html
@@ -56,7 +56,7 @@
 		background-attachment: fixed;
   		background-position: center;
   		background-size: cover;
-		background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url("https://images.unsplash.com/photo-1513366884929-f0b3bedfb653?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b111fd6819e93137251f2eefe1cf8b9c&auto=format&fit=crop&w=1500&q=80");
+		background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url("../../static/app/img/fella.jpg");
 
     /* Full height */
     height: 100%;
