--- a/steps/app/templates/app/searchform.html
+++ b/steps/app/templates/app/searchform.html
@@ -1,55 +1,27 @@
 {% extends 'app/base.html' %}
 {% block content %}
 {% load static%}
-
-<body style="background: url({% static 'app/img/02.jpg' %});background-size: cover;background-position: center;">
-
-  <header class="header navbar-fixed-top">
-    <nav class="navbar" role="navigation">
-      <div class="container">
-        <div class="menu-container js_nav-item">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="toggle-icon"></span>
-          </button>
-
-          <div class="logo">
-            <a class="logo-wrap" href="#body">
-              <img class="logo-img logo-img-main" src="{% static 'app/img/logofinal.png' %}" alt="FlameOnePage Logo">
-              <img class="logo-img logo-img-active" src="{% static 'app/img/logofinal.png' %}" alt="FlameOnePage Dark Logo">
-            </a>
-          </div>
-        </div>
-
-        <div class="collapse navbar-collapse nav-collapse">
-
-          <!--div class="language-switcher">
-            <ul class="nav-lang">
-                        <li><a class="active" href="#">EN</a></li>
-              <li><a href="#">DE</a></li>
-            <li><a href="#">FR</a></li>
-            </ul>
-          </div--> 
-
-          <div class="menu-container">
-            <ul class="nav navbar-nav navbar-nav-right">
-              <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Home</a></li>
-              {% if not user.is_authenticated %}
-              <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Compare</a></li>
-              {% endif %}
-              <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Profile</a></li>
-              <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Logout</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </nav>
-  </header>
+<style>
+.compare-container{
+    display: inline-table;
+    margin-top: 60px;
+    margin-left: 40%;
+}
+</style>
+<div class="profile">
+  <div class="cover-image col-sm-12" style="background-image: none;background-color: #ff6161;height: 300px;">
+  </div>
+  <div class="activitybar col-sm-12 ">
+    <div class="col-sm-offset-2 page-heading">
+      <h3 >Incubated Startups</h3>
+    </div>
+  </div>
+</div>
 
   <div class="compare-container">
     <div class="header-container">	
       <h2> Search</h2>
-      <div class="comparator_name" style="display: flex;">
+      <div class="comparator_name"">
         <form method="GET" action="/search/incubators">
          <input type="text" placeholder="name" name="q">
          <button type="submit">search</button>
@@ -57,7 +29,5 @@
      </div>
    </form>
  </div>
-</div>
-</div>
-{% endblock %}
 </body>
+{% endblock %}
