--- a/steps/app/templates/app/dashboard.html
+++ b/steps/app/templates/app/dashboard.html
@@ -27,6 +27,7 @@
   		<!-- incubator image cards here -->
   		<div class="incubators">
         {% for incubator in incubators %}
+        <a href="/profile/{{incubator.user.username}}">
   			<div class="card " style="width:250px;" data-toggle="tooltip" title="View Profile">
   				<img class="card-img-top" src="{% static 'app/img/profile.jpg' %}" alt="Card image">
   				<div class="card-body">
@@ -34,6 +35,7 @@
   					<p class="card-text">{{incubator.short_description}}</p>
   				</div>
   			</div>
+        </a>
         {% endfor %}
         <a href="{% url 'app:incubator_request' %}">
         <div class="card" style="width:250px; display: flex; flex-direction: column; align-items: center;" data-toggle="tooltip" title="Register Incubator">
@@ -51,6 +53,7 @@
   		<!-- startup image card goes here -->
   		<div class="startups">
         {% for x in startups %}
+        <a href="/profile/{{x.user.username}}">
   			<div class="card " style="width:250px;" data-toggle="tooltip" title="View Profile">
   				<img class="card-img-top" src="{% static 'app/img/profile.jpg' %}" alt="Card image">
   				<div class="card-body">
@@ -58,6 +61,7 @@
   					<p class="card-text">{{x.short_description}}</p>
   				</div>
   			</div>
+        </a>
         {% endfor %}
         <a href="{% url 'app:startup_request' %}">
         <div class="card" style="width:250px; display: flex; flex-direction: column; align-items: center;" data-toggle="tooltip" title="Register Startup">
