--- a/steps/app/static/app/css/main.css
+++ b/steps/app/static/app/css/main.css
@@ -253,3 +253,10 @@ ul li a:hover::after{
 .page-heading h3{
 	margin: 0;
 }
+.generic-back{
+	background-image: url({% static 'app/img/02.jpg' %}) !important;
+	background-position: center;
+	background-size: cover;
+	background-color: #ff6161;
+	height: 300px;
+}
