update cover data

--- a/steps/app/static/app/css/main.css
+++ b/steps/app/static/app/css/main.css
@@ -254,7 +254,7 @@ ul li a:hover::after{
 	margin: 0;
 }
 .generic-back{
-	background-image: url({% static 'app/img/02.jpg' %}) !important;
+	background-image: url("../img/cover-gen.jpg") !important;
 	background-position: center;
 	background-size: cover;
 	background-color: #ff6161;
