--- a/steps/app/templates/app/comparator.html
+++ b/steps/app/templates/app/comparator.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% load static%}
 <div class="profile">
-  <div class="cover-image col-sm-12" style="background-image: none;background-color: #ff6161;height: 300px;">
+  <div class="cover-image col-sm-12 generic-back">
   </div>
   <div class="activitybar col-sm-12 ">
     <div class="col-sm-offset-2 page-heading">
