--- a/steps/app/templates/app/profile_update.html
+++ b/steps/app/templates/app/profile_update.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'app/css/leaderboard.css' %}">
 
 <div class="profile">
-  <div class="cover-image col-sm-12" style="background-image: none;background-color: #ff6161;height: 300px;">
+  <div class="cover-image col-sm-12 generic-back">
   </div>
   <div class="activitybar col-sm-12 ">
     <div class="col-sm-offset-2 page-heading">
