--- a/steps/app/templates/app/searchform.html
+++ b/steps/app/templates/app/searchform.html
@@ -9,7 +9,7 @@
 }
 </style>
 <div class="profile">
-  <div class="cover-image col-sm-12" style="background-image: none;background-color: #ff6161;height: 300px;">
+  <div class="cover-image col-sm-12 generic-back">
   </div>
   <div class="activitybar col-sm-12 ">
     <div class="col-sm-offset-2 page-heading">
